webapp/assets/css/makerbase.css
/* ... */
.tt-hint {
  color: #7d888c;
}
.tt-dropdown-menu {
  background-color: #fff;
  border: 1px solid rgba(0, 0, 0, 0.15);
  box-shadow: 0 1px 0px rgba(0, 0, 0, 0.175);
  min-width: 312px;
  padding: 4px 0 4px 4px;
  z-index: 1000;
}
.tt-dropdown-menu h4 {
  font-size: 1.4em;
  color: #808080;
  font-weight: 200;
  padding-top: 0;
}
.tt-dropdown-menu h4 strong {
  font-weight: 200;
  color: #000;
}
.tt-dropdown-menu .tt-suggestion a {
  text-decoration: none;
}
.tt-dropdown-menu .tt-suggestion.tt-cursor {
  background-color: #44c9d7;
}
.tt-dropdown-menu .tt-suggestion.tt-cursor strong {
  color: #000;
}
#signout-button ul.dropdown-menu {
  border: 1px solid #c9dae1;
  left: -106px;
  top: 42px;
}
#signout-button #signin-button {
  margin-left: -50px;
}
.media-footer {
  display: none;
}
form.form-inline {
  display: inline-block;
}
#activity {
  margin-top: 2em;
}
#activity a.avatar img {
  min-width: 70px;
}
#activity h4 {
  font-weight: 200;
}
#activity h4 a {
  font-weight: 600;
}
#activity h4 a.user-link {
  font-weight: normal;
  color: #333333;
}
#activity h5,
#activity h6 {
  margin: 0;
}
#activity .media {
  padding: 12px;
  margin-top: 8px;
}
#activity .media .media-left a img {
  max-width: 75px;
}
#activity .media blockquote {
  border-left: none;
  margin: 0;
  padding: 8px;
}
#activity .media blockquote h3,
#activity .media blockquote h5,
#activity .media blockquote h6 {
  font-weight: 200;
  margin: 0;
  color: #333333;
}
#activity .media .activity-attachment a.avatar {
  max-width: 5%;
}
#activity .media .activity-attachment a.action-avatar {
  max-width: 5%;
  padding-right: .5em;
}
#activity #pager {
  margin-top: 1em;
}
.footer {
  background-color: #c9dae1;
  color: white;
  min-height: 200px;
  font-size: smaller;
  margin-top: 60px;
  padding-top: 40px;
}
.footer a {
  color: white;
}
.footer .footer-sponsors li {
  margin-bottom: 4px;
}
.footer .footer-sponsors img {
  width: 16px;
  margin-right: 4px;
}
#navbar-alert {
  text-align: center;
  border: none;
}
#navbar-alert a {
  color: #000;
  font-weight: bolder;
}
#navbar-alert a:hover {
  text-decoration: underline;
}
#project-info,
#project-info-edit,
#maker-info,
#maker-info-edit,
#user-profile {
  padding-top: 1em;
}
#project-info h1,
#project-info-edit h1,
#maker-info h1,
#maker-info-edit h1,
#user-profile h1 {
  font-weight: 200;
  margin: 0;
  color: #c73a0a;
}
#project-info h1.archived,
#project-info-edit h1.archived,
#maker-info h1.archived,
#maker-info-edit h1.archived,
#user-profile h1.archived {
  text-decoration: line-through;
}
@media (max-width: 768px) {
  #project-info h1,
  #project-info-edit h1,
  #maker-info h1,
  #maker-info-edit h1,
  #user-profile h1 {
    font-size: 1.2em;
  }
}
#project-info h3,
#project-info-edit h3,
#maker-info h3,
#maker-info-edit h3,
#user-profile h3 {
  font-size: 1.1em;
  font-weight: 200;
  margin: 2px 0;
}
#project-info h5,
#project-info-edit h5,
#maker-info h5,
#maker-info-edit h5,
#user-profile h5 {
  font-size: 0.8em;
  font-weight: 200;
  margin: 6px 0;
}
#project-info .btn,
#project-info-edit .btn,
#maker-info .btn,
#maker-info-edit .btn,
#user-profile .btn {
  font-size: 0.8em;
}
#project-info .media-left,
#project-info-edit .media-left,
#maker-info .media-left,
#maker-info-edit .media-left,
#user-profile .media-left {
  width: 25%;
}
#project-info .img-responsive,
#project-info-edit .img-responsive,
#maker-info .img-responsive,
#maker-info-edit .img-responsive,
#user-profile .img-responsive {
  background-color: #fff;
}
#project-info a,
#maker-info a,
#project-info .btn,
#maker-info .btn {
  padding: 0;
  color: #198a9c;
}
#project-info #maker-info-edit-cancel,
#maker-info #maker-info-edit-cancel,
#project-info #project-info-edit-cancel,
#maker-info #project-info-edit-cancel {
  color: #f576b5;
}
#project-info-edit,
#maker-info-edit {
  display: none;
}
#project-info-edit button.btn-link,
#maker-info-edit button.btn-link {
  padding: 0;
  color: #f576b5;
}
#project-info-edit label,
#maker-info-edit label {
  clear: left;
}
#made-with {
  margin-top: 2em;
}
#made-with ul {
  text-align: center;
  background-color: #fff;
  padding: 0.5em;
  margin: 0;
}
@media (max-width: 992px) {
  #made-with ul {
    font-size: 0.8em;
  }
}
#made-with ul a {
  color: #198a9c;
}
#made-with ul button {
  display: none;
  padding: 0;
  line-height: .5;
}
#made-with ul img {
  width: 16px;
}
#made-with ul li {
  padding: 0;
}
#made-with ul li:hover img {
  display: none;
}
#made-with ul li:hover button {
  display: inline;
  color: #f576b5;
  width: 19px;
  border: 0;
}
#made-with ul li:hover form {
  margin-bottom: 1px;
}
#maker-nudge {
  text-align: center;
  background-color: #fff;
  padding: 0.5em;
  margin-top: 1em;
}
@media (max-width: 992px) {
  #maker-nudge {
    font-size: 0.8em;
  }
}
#maker-nudge a {
  color: #198a9c;
}
#roles {
  margin-top: 1em;
}
#roles h3 {
  margin: .2em 0;
  font-size: 1.4em;
}
#roles h3 a {
  color: #000;
}
#roles h5 {
  margin: 0;
  font-size: 0.8em;
  font-weight: 200;
}
#roles .edit-role-btn {
  color: #198a9c;
}
#roles .edit-role-button-cancel {
  display: none;
}
#roles .role-archive-form {
  display: none;
}
#makers #add-role-form,
#projects #add-role-form {
  display: none;
}
#usedby {
  padding-top: 2em;
}
#usedby h3 {
  margin-top: 10px;
}
#usedby h3 a {
  color: #000;
}
#use-these {
  margin-top: 2em;
}
#use-these #use-these-actions {
  text-align: center;
  background-color: #c9dae1;
  padding-bottom: 1em;
}
#use-these #use-these-actions h4 {
  font-size: 1em;
  font-weight: 200;
  padding: 0.5em;
}
#use-these #use-these-actions .use-these-actions-buttons .btn {
  padding: 6px 8px;
}
#collaborators h3 {
  margin: .2em 0;
  font-size: 1.4em;
}
#collaborators h3 a {
  color: #000;
}
#collaborators .media-body a {
  padding-right: 10px;
  display: inline-block;
}
#collaborators .media-body a img {
  width: 12px;
  height: 12px;
  margin-top: -3px;
}
#user-settings {
  margin-top: 1em;
}
/* ... */

